[package]
name = "anvish-site-runner"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "anvish-site-runner"
path = "src/main.rs"

[dependencies]
anvish = { path = "../anvish-core-link" }
anyhow = "1.0"
serde_json = "1.0"

[patch.crates-io]
tree-sitter = { path = "../vendor/tree-sitter-0.22.6" }
